[tool.poetry]
name = "wcpan.drive.core"
version = "3.1.0"
description = "asynchronous generic cloud drive library"
authors = ["Wei-Cheng Pan <legnaleurc@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/legnaleurc/wcpan.drive.core"
packages = [{include = "wcpan"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.3"
arrow = "^0.17"
"wcpan.logger" = "^1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
